<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_animal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/top_background"
            tools:src="@drawable/top_background"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="Select the animal \n you want!"
                android:textAlignment="center"
                android:textColor="#ffff"

                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/animal_avatar"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/animal_img"
                android:scaleType="centerCrop"
                android:src="@drawable/frog"
                tools:src="@drawable/frog" />

            <Spinner
                android:id="@+id/animal_spinner"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:entries="@array/animal_options" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <!-- Button 1 -->

                <!-- Button 2 -->

                <TableLayout
                    android:id="@+id/animal_info_table"
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="16dp"
                    android:stretchColumns="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/animal_avatar"
                    tools:ignore="NotSibling">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/border">

                        <TextView
                            android:id="@+id/owner_label_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:text="@string/owner_label"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layout_marginEnd="8dp"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/display_owner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:textSize="18sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/border">


                        <TextView
                            android:id="@+id/name_label_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:text="@string/name_label"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layout_marginEnd="8dp"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/display_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:textSize="18sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/border">

                        <TextView
                            android:id="@+id/age_label_text"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@drawable/border"
                            android:text="@string/age_label"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:layout_marginEnd="8dp"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/display_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:background="@drawable/border"
                            android:textSize="18sp" />
                    </TableRow>
                </TableLayout>


                <!-- Button 3 -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edit_button"
                    style="@android:style/Widget.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/button_background"
                    android:text="Edit"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    app:cornerRadius="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/animal_info_table" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>